--- a/src/main/resources/templates/ProductList.html
+++ b/src/main/resources/templates/ProductList.html
@@ -17,6 +17,7 @@
             <th scope="col">Product Name</th>
             <th scope="col">Quantity</th>
             <th scope="col">Delete Product</th>
+            <th scope="col">Edit Product</th>
         </tr>
         </thead>
         <tbody>
@@ -24,6 +25,7 @@
             <td th:text="${product.productName}"></td>
             <td th:text="${product.productQuantity}"></td>
             <td><a th:href="@{'/product/delete/' + ${product.productId}}" class="btn btn-primary btn-sm mb-3">Delete Product</a></td>
+            <td><a th:href="@{'/product/edit/' + ${product.productId}}" class="btn btn-primary btn-sm mb-3">Edit Product</a></td>
         </tr>
         </tbody>
     </table>
