--- a/src/main/resources/templates/ProductList.html
+++ b/src/main/resources/templates/ProductList.html
@@ -24,8 +24,8 @@
         <tr th:each="product: ${products}">
             <td th:text="${product.productName}"></td>
             <td th:text="${product.productQuantity}"></td>
-            <td><a th:href="@{'/product/delete/' + ${product.productId}}" class="btn btn-primary btn-sm mb-3">Delete Product</a></td>
-            <td><a th:href="@{'/product/edit/' + ${product.productId}}" class="btn btn-primary btn-sm mb-3">Edit Product</a></td>
+            <td><a th:href="@{'/product/delete/' + ${product.productId}}" class="btn btn-primary btn-sm mb-3">Delete</a></td>
+            <td><a th:href="@{'/product/edit/' + ${product.productId}}" class="btn btn-primary btn-sm mb-3">Edit</a></td>
         </tr>
         </tbody>
     </table>
